--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>1 lời chúc cho gờ ích</title>
+
+  <!-- Google Font Quicksand -->
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet" />
+
   <style>
     /* Reset & base */
     * {
@@ -11,7 +15,7 @@
     }
     body, html {
       margin: 0; padding: 0;
-      font-family: 'Comic Sans MS', cursive;
+      font-family: 'Quicksand', cursive, sans-serif;
       background: linear-gradient(to bottom, #fceff9, #ffe6f0);
       color: #333;
       overflow-x: hidden;
