--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <div class="message">Không gì có thể làm khó đc gx kkk skibidi bombardini hedgehogini</div>
       </div>
     </div>
-    <button class="bigbang-btn" onclick="showBigBang()">LỜI CHÚC SIÊU TOOO</button>
+    <button class="bigbang-btn" onclick="showBigBang()">BẤM VÀO ĐÂY CÓ LỜI CHÚC SIÊU TOOO</button>
   </section>
 
   <!-- Big Bang -->
